infrastructure/k8s/expiration-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: expiration-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: expiration
    template:
        metadata:
            labels:
                app: expiration
        spec:
            containers:
                - name: expiration
                  # image: us.gcr.io/ticketing-sh/expiration
                  image: jopealgorta/ticketing-expiration
