infrastructure/k8s/tickets-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: tickets-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: tickets
    template:
        metadata:
            labels:
                app: tickets
        spec:
            containers:
                - name: tickets
                  image: us.gcr.io/ticketing-sh/tickets
