infrastructure/k8s/tickets-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: tickets-mongo-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: tickets-mongo
    template:
        metadata:
            labels:
                app: tickets-mongo
        spec:
            containers:
                - name: tickets-mongo
                  image: mongo
