infrastructure/k8s/auth-mongo-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-cluster-ip-service
spec:
  selector:
    app: auth-mongo
  ports:
    - name: db
      port: 27017
      targetPort: 27017
