infrastructure/k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  selector:
    app: client
  ports:
    - name: client
      port: 3000
      targetPort: 3000
