infrastructure/k8s/expiration-redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: expiration-redis-cluster-ip-service
spec:
    selector:
        app: expiration-redis
    ports:
        - name: db
          port: 6379
          targetPort: 6379
