infrastructure/k8s/nats-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats-cluster-ip-service
spec:
  selector:
    app: nats
  ports:
    - name: client
      port: 4222
      targetPort: 4222
    - name: monitoring
      port: 8222
      targetPort: 8222
