infrastructure/k8s/orders-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: orders-cluster-ip-service
spec:
    selector:
        app: orders
    ports:
        - name: orders
          port: 3000
          targetPort: 3000
