infrastructure/k8s/orders-mongo-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: orders-mongo-cluster-ip-service
spec:
    selector:
        app: orders-mongo
    ports:
        - name: db
          port: 27017
          targetPort: 27017
