infrastructure/k8s/payments-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: payments-cluster-ip-service
spec:
    selector:
        app: payments
    ports:
        - name: payments
          port: 3000
          targetPort: 3000
