infrastructure/k8s/payments-mongo-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: payments-mongo-cluster-ip-service
spec:
    selector:
        app: payments-mongo
    ports:
        - name: db
          port: 27017
          targetPort: 27017
