infrastructure/k8s/tickets-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: tickets-cluster-ip-service
spec:
    selector:
        app: tickets
    ports:
        - name: tickets
          port: 3000
          targetPort: 3000
