infrastructure/k8s/tickets-mongo-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: tickets-mongo-cluster-ip-service
spec:
    selector:
        app: tickets-mongo
    ports:
        - name: db
          port: 27017
          targetPort: 27017
